fixed issue 192 scrollbar not present

--- a/src/modules/utils/modals/receive/Receive.less
+++ b/src/modules/utils/modals/receive/Receive.less
@@ -20,6 +20,9 @@ md-dialog.modal-receive {
 
     .tabless {
       padding: 25px;
+      display: block;
+      max-height: calc(90vh ~'- 60px');
+      overflow: auto;
     }
 
     .g-recaptcha {
